fixed overflow issue between window and document

--- a/sass/custom-settings.scss
+++ b/sass/custom-settings.scss
@@ -13,6 +13,10 @@
   font-style: normal;
 }
 
+html {
+  display: block;
+}
+
 .font {
   font-family: 'Open Sans', sans-serif;
   font-size: 1.4375em;
